...
        currentTime.difference(_lastBackPressTime!) >
            const Duration(seconds: 2)) {
      _lastBackPressTime = currentTime;
      ScaffoldMessenger.of(
        context,
      ).showSnackBar(const SnackBar(
          content: Text('Нажмите «Назад» ещё раз, чтобы выйти'),),);
      return false;
    }

    await SystemNavigator.pop();
    return true;
  }
...
