...
  IconData _getCategoryIcon(String categoryName) {
    switch (categoryName) {
      case 'Ведущие':
        return Icons.mic;
      case 'DJ':
        return Icons.headset;
      case 'Фотографы':
        return Icons.camera_alt;
      case 'Видеографы':
        return Icons.videocam;
      case 'Декораторы':
        return Icons.palette;
      case 'Аниматоры':
...
